--- a/src/styles/Schedules.css
+++ b/src/styles/Schedules.css
@@ -1,6 +1,7 @@
 /* Custom calendar styles */
 .custom-calendar {
   border: none;
+  width: 100%;
 }
 
 .custom-calendar .react-calendar__tile--active {
