--- a/src/styles/topbar.css
+++ b/src/styles/topbar.css
@@ -17,3 +17,11 @@
 .notificationItem.read {
   background-color: #fff;
 }
+
+/* topbar.css */
+.topbarComponent {
+  background-color: #fff;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2); /* Add shadow */
+  position: relative;
+  z-index: 10; /* Ensure it's above other elements */
+}
